--- a/app/src/main/res/layout/first_activity.xml
+++ b/app/src/main/res/layout/first_activity.xml
@@ -19,13 +19,10 @@
         android:id="@+id/button3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="上传"></Button>
+        android:text="上传"
+        android:onClick="upload"></Button>
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"></ImageView>
-    <ImageView
-        android:id="@+id/photo"
         android:layout_width="300dp"
         android:layout_height="300dp"></ImageView>
 
